Big checking, found bug in binsize (used only half of radius, although the whole model runs on radius!)

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,10 @@ MODEL/*.mod
 Matlab/*.mat
 Matlab/**/*.mat
 MODEL/**/*.mat
+MODEL/**/**/*.mat
 MODEL/*.mat
+MODEL/**/*.TXT
+MODEL/**/**/*.TXT
+MODEL/**/*~
+MODEL/**/*.bin
+MODEL/**/**/*.bin
